--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-chartjs-2": "^5.3.0",
         "react-day-picker": "^9.7.0",
         "react-hook-form": "^7.58.1",
+        "sonner": "^2.0.6",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^1.0.0",
         "tailwindcss-animate": "^1.0.7",
